# text-similarity-metrics

./: Cargo.toml  README.md
.github/: CODEOWNERS
src/: hash_iterators.rs  lib.rs  metrics.rs  utils.rs
src/metrics/: bleu.rs  cosine.rs  jaccard.rs  rouge_n.rs  shared.rs
