[package]
name = "text-similarity-metrics"
version = "0.1.0"
edition = "2024"
license = "mit"
description = "A high-performance Rust library for computing text similarity using multiple algorithms."
repository = "https://github.com/nimibs/text-similarity-metrics"
keywords = ["text", "similarity", "rouge", "bleu", "cosine"]
authors = ["nimi.bs@gmail.com"]

[dependencies]
nohash-hasher = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
